@@ -30,14 +30,12 @@ int edump(int type, void *data)
 	return OK;
 }
 
+/* Open a file to log errors to. */
 int init_logging()
 {
-	char log_filename[1024];
-	/* Open a file to log errors to. */
-	if (output_path[0] != '\0') {
-		strcat(output_path, "/");
-	}
-	sprintf(log_filename, "%s%s", output_path, ERROR_LOG_NAME);
+	char log_filename[512];
+	log_filename[511] = '\0';
+	snprintf(log_filename, 511, "%s/%s", output_path, ERROR_LOG_NAME);
 	log_error = fopen(log_filename, "w");
 	if (log_error == NULL) {
 		fprintf(stderr, "cannot open %s\n", log_filename);
